fix: filter dropdown alignment in org-chart done (#155)
fix: filter dropdown alignment in org-chart done

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -153,6 +153,9 @@
                 @media (max-width:1200px) {
                     gap: 10px !important;
                 }
+                @media (min-width:1201px) and (max-width:1393px) {
+                    gap: 13px !important;
+                }
                 & div{
                     @extend .bg-white,.shadow,.rounded-2,.fs-6,.py-3,.px-3,.align-items-center,.d-flex,.justify-content-between;
                     color: #0d2c3678;  
